example/lib/src/l10n/errors/app_he.arb
{
  "@@locale": "he",
  "error": "אירעה שגיאה",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "אירעה שגיאה בלתי צפויה",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "דיווח באג נשלח בהצלחה.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}